// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template / Inflate inflates module template 1`] = `
"/ prefix
├── androidTest / com / example / designsystem / ApplicationTest.java
├── designsystem
│   ├── .gitignore
│   ├── build.gradle
│   ├── libs
│   └── src
│       ├── com / example / designsystem
│       └── main
│           ├── AndroidManifest.xml
│           └── res
│               ├── drawable
│               └── values / strings.xml
└── settings.gradle"
`;

exports[`Template / Inflate inflates project template 1`] = `
"/ prefix
├── .gitignore
├── build.gradle
├── gradle / wrapper
│   ├── gradle-wrapper.jar
│   └── gradle-wrapper.properties
├── gradle.properties
├── gradlew
├── gradlew.bat
├── local.properties
└── settings.gradle"
`;

exports[`Template / Inflate inflates project template, then module template on top 1`] = `
"/ prefix
├── .gitignore
├── androidTest / com / example / designsystem / ApplicationTest.java
├── build.gradle
├── designsystem
│   ├── .gitignore
│   ├── build.gradle
│   ├── libs
│   └── src
│       ├── com / example / designsystem
│       └── main
│           ├── AndroidManifest.xml
│           └── res
│               ├── drawable
│               └── values / strings.xml
├── gradle / wrapper
│   ├── gradle-wrapper.jar
│   └── gradle-wrapper.properties
├── gradle.properties
├── gradlew
├── gradlew.bat
├── local.properties
└── settings.gradle"
`;
